[metadata]
name = filesystems
url = "https://github.com/Julian/Filesystems"
description = "A filesystem abstraction layer"
long_description = file: README.rst
author = "Julian Berman"
author_email = Julian+filesystems@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    attrs
    pyrsistent

[options.extras_require]
click =
    click

[flake8]
exclude = filesystems/__init__.py

