[metadata]
name = filesystems
url = https://github.com/Julian/Filesystems
project_urls =
    Source = https://github.com/Julian/filesystems
    Issues = https://github.com/Julian/filesystems/issues/
description = A filesystem abstraction layer
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+filesystems@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    attrs
    pyrsistent
    zope.interface

[options.extras_require]
click =
    click

[flake8]
exclude = filesystems/__init__.py
